--- a/SmartBartender/MainWindow.xaml
+++ b/SmartBartender/MainWindow.xaml
@@ -5,14 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartBartender"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="550" Width="850"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         FontFamily="Poppins"
         xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
         MouseLeftButtonDown="Window_MouseLeftButtonDown">
-    <Grid>
-        
-    </Grid>
+    <Border Background="Black">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" Orientation="Horizontal">
+                <material:PackIcon Kind="Minus" x:Name="PIMinus" MouseLeftButtonDown="PIMinus_MouseLeftButtonDown"/>
+                <material:PackIcon Kind="Close" x:Name="PIClose" MouseLeftButtonDown="PIClose_MouseLeftButtonDown"/>
+            </StackPanel>
+            <TextBlock x:Name="txtName" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="22" Margin="15,0,0,0"/>
+            <StackPanel Grid.Row="1">
+                <Grid Height="500">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                        <Grid Height="500">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="155"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="155"/>
+                            </Grid.RowDefinitions>
+                            <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock x:Name="txtAdmin" Text="Админ" FontSize="15" HorizontalAlignment="Center"/>
+                                <Button x:Name="btnSupplyOfAlcohol" Click="btnSupplyOfAlcohol_Click" VerticalAlignment="Center" Background="Transparent" Height="40" Content="Поставка"  Width="120" Margin="0,10,0,10"/>
+                                <Button x:Name="btnGenerator" Click="btnGenerator_Click" VerticalAlignment="Center" Background="Transparent" Height="40" Content="Генератор"  Width="120" />
+                            </StackPanel>
+                            <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,-15,0,0">
+                                <TextBlock Text="Главная" FontSize="15" HorizontalAlignment="Center"/>
+                                <Button VerticalAlignment="Center" Background="Transparent" Height="40" Content="Заказать"  Width="120" Margin="0,10,0,10" />
+                                <Button VerticalAlignment="Center" Background="Transparent" Height="40" Content="Заказы"  Width="120" Margin="0,0,0,10"/>
+                                <Button VerticalAlignment="Center" Background="Transparent" Height="40" Content="Генератор"  Width="120" />
+                            </StackPanel>
+                            <StackPanel Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Top">
+                                <TextBlock Text="Прочее" FontSize="15" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                                <Button  Background="Transparent" Height="40" Content="Аккаунт"  Width="120" x:Name="btnAccount" Click="btnAccount_Click" Margin="0,10,0,10"/>
+                                <Button  Background="Transparent" Height="40" Content="Выход" x:Name="btnExit" Click="btnExit_Click" Width="120"/>
+                            </StackPanel>
+                        </Grid>
+                    </StackPanel>
+                    <Frame Grid.Column="1" Name="FramePageContainer"
+                            Width="700" Height="500"
+                            NavigationUIVisibility="Hidden"/>
+                </Grid>
+            </StackPanel>
+        </Grid>
+    </Border>
 </Window>
