--- a/SmartBartender/Windws/Auth.xaml
+++ b/SmartBartender/Windws/Auth.xaml
@@ -35,7 +35,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="2" Orientation="Vertical" VerticalAlignment="Center" Margin="15">
                     <Button Background="Transparent" Width="220" Height="40" Content="Enter" Foreground="Black" x:Name="btnAuth" Click="btnAuth_Click" Cursor="Hand"/>
-                    <TextBlock Text="dont have account" HorizontalAlignment="Right" Margin="0,5,0,0" x:Name="txtReg" MouseLeftButtonDown="txtReg_MouseLeftButtonDown"/>
+                    <TextBlock FontSize="12" Text="dont have account" HorizontalAlignment="Right" Margin="0,5,0,0" x:Name="txtReg" MouseLeftButtonDown="txtReg_MouseLeftButtonDown"/>
                 </StackPanel>
             </Grid>
         </material:Card>
