--- a/SmartBartender/Pages/GeneratorPage.xaml
+++ b/SmartBartender/Pages/GeneratorPage.xaml
@@ -53,8 +53,9 @@
                 </ComboBox>
                 <Button Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Background="Transparent" Width="220" Height="40" Content="Получить Напиток" Foreground="Black" Cursor="Hand" x:Name="btnAdd" Click="btnAdd_Click" Margin="0,40,0,0"/>
             </StackPanel>
-            <Image Grid.Row="0" Grid.Column="1" Margin="10" x:Name="imgAlco" RenderOptions.BitmapScalingMode="HighQuality"/>
+            <Image Grid.Row="0" Grid.Column="1" Margin="10" Source="{Binding Image}" x:Name="imgAlco" RenderOptions.BitmapScalingMode="HighQuality"/>
             <TextBox
+                    IsReadOnly="True"
                     Foreground="#9966cc"
                     Grid.Row="1"
                     Grid.Column="1"
